--- a/templates/file_list.html
+++ b/templates/file_list.html
@@ -1,7 +1,8 @@
 <ul>
     {% for file in files %}
     <li>
-        {{ file.file_name }}
+        <a href="{{ file.get_absolute_url }}">{{ file.file_name }}</a>
+        [<a href="{{ file.get_download_url }}">download</a>]
         <form action="/delete" method="POST">
             <input type="hidden" name="file" value="{{ file.id }}" />
             <input type="submit" value="del" />
