--- a/templates/file_page.html
+++ b/templates/file_page.html
@@ -3,6 +3,6 @@
 {% block body %}
 <h1>{{ music_file.file_name }}</h1>
 
-<a href="{{ music_file.get_download_url }}">{{ music_file.file_name }}</a>
+[<a href="{{ music_file.get_download_url }}">download</a>]
 
 {% endblock %}
