--- a/templates/file_page.html
+++ b/templates/file_page.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block body %}
-<h1>{{ music_file.file_name }}</h1>
+<h1>{{ music_file.original_name }}</h1>
 
 [<a href="{{ music_file.get_download_url }}">download</a>]
 
