--- a/templates/file_upload.html
+++ b/templates/file_upload.html
@@ -1,6 +1,13 @@
+{% extends "base.html" %}
+{% load music_hub_tags %}
+
+{% block body %}
+<h1>File upload</h1>
+
 <form enctype="multipart/form-data" method="POST">
 <ul>
 {{ form.as_ul }}
 </ul>
 <input type="submit" value="upload">
 </form>
+{% endblock %}
