--- a/templates/auth_login.html
+++ b/templates/auth_login.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 
 {% block body %}
+<h1>Authentication</h1>
+
 <form action="/auth" method="POST">
 <input type="hidden" name="do" value="login" />
 <h3>Log in</h3>
