--- a/templates/person_page.html
+++ b/templates/person_page.html
@@ -1,3 +1,7 @@
+{% extends "base.html" %}
+{% load music_hub_tags %}
+
+{% block body %}
 <ul>
     {% for file in files %}
     <li>
@@ -10,3 +14,4 @@
     </li>
     {% endfor %}
 </ul>
+{% endblock %}
