--- a/templates/tag_person_link.html
+++ b/templates/tag_person_link.html
@@ -1,2 +1,4 @@
 <a href="/people/{{ person.username }}">{{ person.username }}</a>
-{% if show_name %}<em>({{ person.first_name }} {{ person.last_name }})</em>{% endif %}
+{% if show_name %}{% if person.first_name or person.last_name %}
+    <em>({{ person.first_name }} {{ person.last_name }})</em>
+{% endif %}{% endif %}
