in-browser player (by david)

--- a/templates/base.html
+++ b/templates/base.html
@@ -5,6 +5,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <link rel="stylesheet" href="/media/music_hub/main.css" type="text/css">
+    <script type="JavaScript" src="/media/music_hub/audio-player.js"></script>
     <title>{% block title %}Music Hub{% endblock %}</title>
     {% block extra_head %}{% endblock %}
 </head>
