--- a/templates/index.html
+++ b/templates/index.html
@@ -14,14 +14,7 @@
             <a href="{{ song.get_download_url }}" class="dlink">[ download ]</a>
             <a href="{{ song.get_absolute_url }}">{{ song.original_name }}</a>
             <span class="ulink">( from <a href="/people/{{ song.owner.username }}">{{ song.owner.username }}</a> )</span>
-        <object type="application/x-shockwave-flash" data="/media/music_hub/player.swf" id="{{ song.get_absolute_url }}" height="24" width="290">
-            <param name="movie" value="/media/music_hub/player.swf">
-            <param name="FlashVars" value="playerID=1&amp;soundFile={{ song.get_download_url }}">
-            <param name="quality" value="high">
-            <param name="menu" value="false">
-            <param name="wmode" value="transparent">
-        </object>
-        
+            {% song_player song%}
         </p>
     </li>
 {% endfor %}
