--- a/templates/song_upload_done.html
+++ b/templates/song_upload_done.html
@@ -2,7 +2,7 @@
 {% load music_hub_tags %}
 
 {% block body %}
-<h1>File upload</h1>
-
-success!
+<h2>File upload</h2>
+<p>File successfully uploaded!</p>
+<a href="/">Return to index</a>
 {% endblock %}
