--- a/templates/person_page.html
+++ b/templates/person_page.html
@@ -2,11 +2,13 @@
 {% load music_hub_tags %}
 
 {% block body %}
+View <a href="/">Latest uploads</a>
 <ul>
     {% for song in songs %}
     <li>
         <a href="{{ song.get_absolute_url }}">{{ song.original_name }}</a>
         [<a href="{{ song.get_download_url }}">download</a>]
+        {% song_player song%}
         <form action="/delete" method="POST">
             <input type="hidden" name="song" value="{{ song.id }}" />
             <input type="submit" value="del" />
